			- 0 : undershirt/bra
			- 1 : none
			- 2 : shirt/dresses
			- 3 : jackets/coats
			- 4 : cloaks etc
		- bottom layers:
			- 0 : underwear/panties
			- 1 : hosiery/leg warmers?
			- 2 : pants/skirts/dresses
			- 3 : coats etc
			- 4 : cloaks etc
		- feet layer:
			- 1 : hosiery/leg warmers/socks
			- 2 : shoes
	- Unfortunately this may mean that your saves are no longer compatible.

- If you start off as a female or a herm, you start with bra and panties instead of boxers.

Balance:
- Made divine pussy's divine charge stack double every time she takes pleasure damage instead of increasing it by .25
	- Makes getting out of vaginal penetration very important versus Angel
- Made enthrall stack less.
	- When enthralled status is added on to a already enthralled opponent, the final duration will be whatever is more:
		- Original duration + 1
		- New duration - number of times this enthralled status has been refreshed
- Fetishes now last throughout a match, but decrease in magnitude as time passes to a minimum magnitude of .25
	- Being pleasured by the fetish part will increase magnitude by .05
- Kiss of Baptism has been rebalanced a bit.
	- It now costs 30 mojo instead of building 10 mojo.
	- Now always applies Love Struck, but only for 2 turns
	- Now builds you 50% mojo
	- Now fully heals you
	- Buffed base damage bonus to 20

Bug fix:
- Deep kiss and drain kiss' text was swapped around
- Fixed invitation text
- Fixed some bugs with insertion requirements requiring the wrong person to be inserted.
- Fixed a text bug with alluring
- Fixed a bug where sometimes on insertion, the game would bug out
- Fixed a bug that was causing the game to bug out when transformations changed outside a match
- Fixed a bug where struggle has unformatted text

Other changes:
- NPCs now buy priapus drafts & femdrafts based on the male pref slider. They also buy them much less than before.
- Logs now also show status effects being added and removed