@@ -16,6 +16,7 @@ public class JSONUtils {
 	public static float readFloat(JSONObject struct, String key) {
 		return ((Number)struct.get(key)).floatValue();
 	}
+
 	public static String readString(JSONObject struct, String key) {
 		return (String)struct.get(key);
 	}
