@@ -12,6 +12,10 @@ public enum ClothingTrait {
 	martial("Martial","Ki bonus"),
 	broody("Broody","Dark bonus"),
 	kinky("Kinky","Fetish bonus"),
+	shoes("Shoes","Easy to move in"),
+	heels("Heels","Hard to run in unless you're used to it"),
+	highheels("High Heels","Very hard to run in unless you're used to it"),
+	higherheels("Higher Heels","Impossible to run in unless you're used to it"),
 	tentacleUnderwear("Tentacle Underwear","Wearing tentacle underwear"),
 	tentacleSuit("Tentacle Suit","Wearing a tentacle suit"),
 	stylish("Stylish","Better mojo gain"),
